# struct_llm

./: .gitignore  README.md  app.py  explore_db.py  nl_to_sql.py  pyproject.toml  setup.py
data/: customers.csv  generate_sample_data.py  orders.csv  products.csv  update_database.py
src/struct_llm/: __init__.py  database.py  init_db.py
