[project]
name = "struct_llm"
version = "0.1.0"
description = "A project for structured data analysis using LLMs"
authors = [
    { name = "Dmitry Goodman" }
]
dependencies = [
    "pandas>=2.0.0",
    "faker>=19.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "duckdb>=0.9.0",
    "polars>=0.20.0",
    "requests>=2.31.0"
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38" 